Fixed spacing in paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
   display: flex;
+  box-sizing: border-box;
   flex-direction: column;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
@@ -214,8 +215,6 @@ textarea {
   padding: 4vw;
   margin-bottom: 2.5vh;
 }
-
-
 
 /* Footer */
 footer {
